--- a/202409/240902_threshold_morph/240902_1_threshold.ipynb
+++ b/202409/240902_threshold_morph/240902_1_threshold.ipynb
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +515,7 @@
     "                print(\"좌측 상단에서 우측 하단으로 영역을 드래그 하세요.\")\n",
     "\n",
     "# img = cv2.imread('./sunset.jpg')\n",
-    "img = cv2.imread('../data/img/bbb.png')\n",
+    "img = cv2.imread('../../data/img/bbb.png')\n",
     "cv2.imshow('img', img)\n",
     "cv2.setMouseCallback('img', onMouse) # 마우스 이벤트 등록 ---⑧\n",
     "cv2.waitKey()\n",
