--- a/202409/240904_warpAffine_GaussianBlur/240904_2.ipynb
+++ b/202409/240904_warpAffine_GaussianBlur/240904_2.ipynb
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
     "import numpy as np\n",
     "\n",
     "# Load the image\n",
-    "img = cv2.imread('../data/img/bbb.png')\n",
+    "img = cv2.imread('../../data/img/bbb.png')\n",
     "rows, cols = img.shape[0:2] \n",
     "# Compute the size of the bounding box after rotation\n",
     "# new_cols = int(cols * 1.5)\n",
