--- a/202409/240904_warpAffine_GaussianBlur/240904_3.ipynb
+++ b/202409/240904_warpAffine_GaussianBlur/240904_3.ipynb
@@ -133,7 +133,7 @@
     "\n",
     "rate = 15               # 모자이크에 사용할 축소 비율 (1/rate)\n",
     "win_title = 'mosaic'    # 창 제목\n",
-    "img = cv2.imread('../data/img/eee.png')    # 이미지 읽기\n",
+    "img = cv2.imread('../../data/img/eee.png')    # 이미지 읽기\n",
     "\n",
     "while True:\n",
     "    x,y,w,h = cv2.selectROI(win_title, img, False) # 관심영역 선택\n",
