--- a/202409/240906_harrisCorner/240906_1_harrisCorner.ipynb
+++ b/202409/240906_harrisCorner/240906_1_harrisCorner.ipynb
@@ -12,7 +12,7 @@
     "# Harris 코너 검출 함수\n",
     "def corner_harris():\n",
     "    # 이미지를 그레이스케일로 로드\n",
-    "    src = cv2.imread('../data/img/aaa.jpg', cv2.IMREAD_GRAYSCALE)\n",
+    "    src = cv2.imread('../../data/img/mille_girl.png', cv2.IMREAD_GRAYSCALE)\n",
     "\n",
     "    # 이미지 로드에 실패한 경우\n",
     "    if src is None:\n",
@@ -50,7 +50,7 @@
     "# FAST 코너 검출 함수\n",
     "def corner_fast():\n",
     "    # 이미지를 그레이스케일로 로드\n",
-    "    src = cv2.imread('../data/img/eee.png', cv2.IMREAD_GRAYSCALE)\n",
+    "    src = cv2.imread('../../data/img/mille_girl.png', cv2.IMREAD_GRAYSCALE)\n",
     "\n",
     "    # 이미지 로드에 실패한 경우\n",
     "    if src is None:\n",
@@ -86,31 +86,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Image load failed!\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31mSystemExit\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\anaconda3\\envs\\cv2\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3516: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+      "len(keypoints): 500\n",
+      "desc.shape: (500, 32)\n"
      ]
     }
    ],
@@ -120,7 +104,7 @@
     "import cv2\n",
     "\n",
     "# 입력 이미지 파일을 그레이스케일로 읽어옵니다.\n",
-    "src = cv2.imread('../data/img/malle_girl.png', cv2.IMREAD_GRAYSCALE)\n",
+    "src = cv2.imread('../../data/img/mille_girl.png', cv2.IMREAD_GRAYSCALE)\n",
     "\n",
     "# 이미지를 읽어오는 데 실패했을 경우 에러 메시지를 출력하고 프로그램을 종료합니다.\n",
     "if src is None:\n",
@@ -160,15 +144,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "desc1.shape: (123, 32)\n",
-      "desc2.shape: (500, 32)\n"
+      "desc1.shape: (78, 32)\n",
+      "desc2.shape: (500, 32)\n",
+      "Image load failed!\n"
+     ]
+    },
+    {
+     "ename": "error",
+     "evalue": "OpenCV(4.10.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\calib3d\\src\\fundam.cpp:390: error: (-28:Unknown error code -28) The input arrays should have at least 4 corresponding point sets to calculate Homography in function 'cv::findHomography'\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31merror\u001b[0m                                     Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 99\u001b[0m\n\u001b[0;32m     97\u001b[0m keypoint_matching()\n\u001b[0;32m     98\u001b[0m good_matching()\n\u001b[1;32m---> 99\u001b[0m \u001b[43mfind_homography\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[1], line 82\u001b[0m, in \u001b[0;36mfind_homography\u001b[1;34m()\u001b[0m\n\u001b[0;32m     79\u001b[0m pts1 \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([keypoints1[m\u001b[38;5;241m.\u001b[39mqueryIdx]\u001b[38;5;241m.\u001b[39mpt \u001b[38;5;28;01mfor\u001b[39;00m m \u001b[38;5;129;01min\u001b[39;00m good_matches])\u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m)\u001b[38;5;241m.\u001b[39mastype(np\u001b[38;5;241m.\u001b[39mfloat32)\n\u001b[0;32m     80\u001b[0m pts2 \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([keypoints2[m\u001b[38;5;241m.\u001b[39mtrainIdx]\u001b[38;5;241m.\u001b[39mpt \u001b[38;5;28;01mfor\u001b[39;00m m \u001b[38;5;129;01min\u001b[39;00m good_matches])\u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m)\u001b[38;5;241m.\u001b[39mastype(np\u001b[38;5;241m.\u001b[39mfloat32)\n\u001b[1;32m---> 82\u001b[0m H, _ \u001b[38;5;241m=\u001b[39m \u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfindHomography\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpts1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpts2\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mRANSAC\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     84\u001b[0m (h, w) \u001b[38;5;241m=\u001b[39m src1\u001b[38;5;241m.\u001b[39mshape[:\u001b[38;5;241m2\u001b[39m]\n\u001b[0;32m     85\u001b[0m corners1 \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([[\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m], [\u001b[38;5;241m0\u001b[39m, h\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m], [w\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, h\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m], [w\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m0\u001b[39m]])\u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m)\u001b[38;5;241m.\u001b[39mastype(np\u001b[38;5;241m.\u001b[39mfloat32)\n",
+      "\u001b[1;31merror\u001b[0m: OpenCV(4.10.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\calib3d\\src\\fundam.cpp:390: error: (-28:Unknown error code -28) The input arrays should have at least 4 corresponding point sets to calculate Homography in function 'cv::findHomography'\n"
      ]
     }
    ],
@@ -178,8 +175,8 @@
     "\n",
     "\n",
     "def keypoint_matching():\n",
-    "    src1 = cv2.imread('../data/img/cropped.png', cv2.IMREAD_GRAYSCALE)\n",
-    "    src2 = cv2.imread('../data/img/bbb.png', cv2.IMREAD_GRAYSCALE)\n",
+    "    src1 = cv2.imread('../../data/img/cropped.jpg', cv2.IMREAD_GRAYSCALE)\n",
+    "    src2 = cv2.imread('../../data/img/bbb.png', cv2.IMREAD_GRAYSCALE)\n",
     "\n",
     "    if src1 is None or src2 is None:\n",
     "        print('Image load failed!')\n",
@@ -203,7 +200,7 @@
     "\n",
     "\n",
     "def good_matching():\n",
-    "    src1 = cv2.imread('../data/img/cropped.png', cv2.IMREAD_GRAYSCALE)\n",
+    "    src1 = cv2.imread('../data/img/cropped.jpg', cv2.IMREAD_GRAYSCALE)\n",
     "    src2 = cv2.imread('../data/img/bbb.png', cv2.IMREAD_GRAYSCALE)\n",
     "\n",
     "    if src1 is None or src2 is None:\n",
@@ -230,8 +227,8 @@
     "\n",
     "\n",
     "def find_homography():\n",
-    "    src1 = cv2.imread('../data/img/cropped.png', cv2.IMREAD_GRAYSCALE)\n",
-    "    src2 = cv2.imread('../data/img/bbb.png', cv2.IMREAD_GRAYSCALE)\n",
+    "    src1 = cv2.imread('../../data/img/cropped.png', cv2.IMREAD_GRAYSCALE)\n",
+    "    src2 = cv2.imread('../../data/img/bbb.png', cv2.IMREAD_GRAYSCALE)\n",
     "\n",
     "    if src1 is None or src2 is None:\n",
     "        print('Image load failed!')\n",
