--- a/202409/240906_harrisCorner/240906_2.ipynb
+++ b/202409/240906_harrisCorner/240906_2.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error on stitching! Status code: 1\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "\n",
@@ -42,8 +50,8 @@
     "    cv2.destroyAllWindows()\n",
     "\n",
     "# Example usage\n",
-    "image_paths = ['../data/img/mol1.png', '../data/img/mol2.png', '../data/img/mol3.png']  # Replace with your image paths\n",
-    "output_path = '../data/img/resultStitched.png'\n",
+    "image_paths = ['../../data/img/mol1.png', '../../data/img/mol2.png', '../../data/img/mol3.png']  # Replace with your image paths\n",
+    "output_path = '../../data/img/resultStitched.png'\n",
     "stitch_images(image_paths, output_path)\n"
    ]
   },
