--- a/202409/240905_label/240905_2_labeling.ipynb
+++ b/202409/240905_label/240905_2_labeling.ipynb
@@ -1181,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1191,7 +1191,7 @@
     "import random\n",
     "\n",
     "\n",
-    "cap = cv2.VideoCapture('../data/img/streets.mp4')\n",
+    "cap = cv2.VideoCapture('../../data/img/walking.avi')\n",
     "\n",
     "if not cap.isOpened():\n",
     "    print('Video open failed!')\n",
