--- a/202409/240906_harrisCorner/240906_2.ipynb
+++ b/202409/240906_harrisCorner/240906_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -57,9 +57,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image load failed for ../data/img/mol1.png!\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "\n",
@@ -104,9 +112,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image load failed for ../data/img/mol1.png!\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "\n",
@@ -153,9 +169,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image load failed for ../data/img/xxx1.png!\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "\n",
@@ -202,9 +226,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "error",
+     "evalue": "OpenCV(4.10.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\imgproc\\src\\color.cpp:196: error: (-215:Assertion failed) !_src.empty() in function 'cv::cvtColor'\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31merror\u001b[0m                                     Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m#영상 읽어서 그레이 스케일로 변환\u001b[39;00m\n\u001b[0;32m      4\u001b[0m img \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mimread(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../data/img/pistol.jpg\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m----> 5\u001b[0m gray \u001b[38;5;241m=\u001b[39m \u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcvtColor\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimg\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mCOLOR_BGR2GRAY\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m# 8x8 크기로 축소 ---①\u001b[39;00m\n\u001b[0;32m      8\u001b[0m gray \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mresize(gray, (\u001b[38;5;241m16\u001b[39m,\u001b[38;5;241m16\u001b[39m))\n",
+      "\u001b[1;31merror\u001b[0m: OpenCV(4.10.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\imgproc\\src\\color.cpp:196: error: (-215:Assertion failed) !_src.empty() in function 'cv::cvtColor'\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "\n",
@@ -236,9 +272,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "error",
+     "evalue": "OpenCV(4.10.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\highgui\\src\\window.cpp:973: error: (-215:Assertion failed) size.width>0 && size.height>0 in function 'cv::imshow'\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31merror\u001b[0m                                     Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m# 영상 읽기 및 표시\u001b[39;00m\n\u001b[0;32m      7\u001b[0m img \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mimread(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../data/img/black_cat.png\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m----> 8\u001b[0m \u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mimshow\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mquery\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mimg\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;66;03m# 비교할 영상들이 있는 경로 ---①\u001b[39;00m\n\u001b[0;32m     11\u001b[0m search_dir \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../data/101_ObjectCategories\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
+      "\u001b[1;31merror\u001b[0m: OpenCV(4.10.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\highgui\\src\\window.cpp:973: error: (-215:Assertion failed) size.width>0 && size.height>0 in function 'cv::imshow'\n"
+     ]
+    }
+   ],
    "source": [
     "# 해밍거리 찾는법\n",
     "import cv2\n",
@@ -294,9 +342,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "float division by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 23\u001b[0m\n\u001b[0;32m     21\u001b[0m cap \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mVideoCapture(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../data/img/walking.avi\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     22\u001b[0m fps \u001b[38;5;241m=\u001b[39m cap\u001b[38;5;241m.\u001b[39mget(cv2\u001b[38;5;241m.\u001b[39mCAP_PROP_FPS) \u001b[38;5;66;03m# 프레임 수 구하기\u001b[39;00m\n\u001b[1;32m---> 23\u001b[0m delay \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;241;43m1000\u001b[39;49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43mfps\u001b[49m)\n\u001b[0;32m     25\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m cap\u001b[38;5;241m.\u001b[39misOpened():\n\u001b[0;32m     26\u001b[0m   ret,frame \u001b[38;5;241m=\u001b[39m cap\u001b[38;5;241m.\u001b[39mread()\n",
+      "\u001b[1;31mZeroDivisionError\u001b[0m: float division by zero"
+     ]
+    }
+   ],
    "source": [
     "import cv2, numpy as np\n",
     "\n",
@@ -347,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -458,9 +518,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "float division by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[11], line 22\u001b[0m\n\u001b[0;32m     20\u001b[0m cap \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mVideoCapture(video_src)\n\u001b[0;32m     21\u001b[0m fps \u001b[38;5;241m=\u001b[39m cap\u001b[38;5;241m.\u001b[39mget(cv2\u001b[38;5;241m.\u001b[39mCAP_PROP_FPS) \u001b[38;5;66;03m# 프레임 수 구하기\u001b[39;00m\n\u001b[1;32m---> 22\u001b[0m delay \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;241;43m1000\u001b[39;49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43mfps\u001b[49m)\n\u001b[0;32m     23\u001b[0m win_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTracking APIs\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m     24\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m cap\u001b[38;5;241m.\u001b[39misOpened():\n",
+      "\u001b[1;31mZeroDivisionError\u001b[0m: float division by zero"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "\n",
@@ -527,6 +599,112 @@
     "    print( \"Could not open video\")\n",
     "cap.release()\n",
     "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: Could not open video file.\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "\n",
+    "# 트랙커 객체 생성자 함수 리스트\n",
+    "trackers = [\n",
+    "    cv2.TrackerMIL_create,\n",
+    "    #cv2.TrackerKCF_create,\n",
+    "    #cv2.TrackerTLD_create,\n",
+    "    #cv2.TrackerMedianFlow_create,\n",
+    "    #cv2.TrackerGOTURN_create,  # GOTURN은 특정 환경에서 버그 발생 가능\n",
+    "    cv2.TrackerDaSiamRPN_create,\n",
+    "    #cv2.TrackerMOSSE_create\n",
+    "]\n",
+    "\n",
+    "trackerIdx = 0  # 트랙커 생성자 함수 선택 인덱스\n",
+    "tracker = None\n",
+    "isFirst = True\n",
+    "\n",
+    "# 비디오 파일 경로 설정\n",
+    "video_src = \"../../data/img/highway.mp4\"\n",
+    "cap = cv2.VideoCapture(video_src)\n",
+    "\n",
+    "# 비디오 파일이 제대로 열렸는지 확인\n",
+    "if not cap.isOpened():\n",
+    "    print(\"Error: Could not open video file.\")\n",
+    "    exit()\n",
+    "\n",
+    "# FPS 가져오기\n",
+    "fps = cap.get(cv2.CAP_PROP_FPS)\n",
+    "if fps == 0:\n",
+    "    fps = 30  # FPS 값이 0일 때 기본값으로 30을 사용\n",
+    "\n",
+    "delay = int(1000 / fps)\n",
+    "win_name = 'Tracking APIs'\n",
+    "\n",
+    "while cap.isOpened():\n",
+    "    ret, frame = cap.read()\n",
+    "    if not ret:\n",
+    "        print('Cannot read video file')\n",
+    "        break\n",
+    "    img_draw = frame.copy()\n",
+    "\n",
+    "    if tracker is None:  # 트랙커가 없는 경우\n",
+    "        cv2.putText(img_draw, \"Press the Space to set ROI!!\", \\\n",
+    "            (100, 80), cv2.FONT_HERSHEY_SIMPLEX, 0.75, (0, 0, 255), 2, cv2.LINE_AA)\n",
+    "    else:\n",
+    "        ok, bbox = tracker.update(frame)  # 새로운 프레임에서 추적 위치 찾기\n",
+    "        if ok:  # 추적 성공\n",
+    "            (x, y, w, h) = bbox\n",
+    "            cv2.rectangle(img_draw, (int(x), int(y)), (int(x + w), int(y + h)), (0, 255, 0), 2, 1)\n",
+    "        else:  # 추적 실패\n",
+    "            cv2.putText(img_draw, \"Tracking fail.\", (100, 80), \\\n",
+    "                        cv2.FONT_HERSHEY_SIMPLEX, 0.75, (0, 0, 255), 2, cv2.LINE_AA)\n",
+    "\n",
+    "    trackerName = tracker.__class__.__name__\n",
+    "    cv2.putText(img_draw, str(trackerIdx) + \":\" + trackerName, (100, 20), \\\n",
+    "                 cv2.FONT_HERSHEY_SIMPLEX, 0.75, (0, 255, 0), 2, cv2.LINE_AA)\n",
+    "\n",
+    "    cv2.imshow(win_name, img_draw)\n",
+    "    key = cv2.waitKey(delay) & 0xff\n",
+    "\n",
+    "    # 스페이스 바 또는 비디오 파일 최초 실행\n",
+    "    if key == ord(' ') or (video_src != 0 and isFirst):\n",
+    "        isFirst = False\n",
+    "        roi = cv2.selectROI(win_name, frame, False)  # 초기 객체 위치 설정\n",
+    "        if roi[2] and roi[3]:  # 위치 설정 값 있는 경우\n",
+    "            tracker = trackers[trackerIdx]()  # 트랙커 객체 생성\n",
+    "            isInit = tracker.init(frame, roi)\n",
+    "\n",
+    "    elif key in range(48, 56):  # 0~7 숫자 입력\n",
+    "        trackerIdx = key - 48  # 선택한 숫자로 트랙커 인덱스 수정\n",
+    "        if bbox is not None:\n",
+    "            tracker = trackers[trackerIdx]()  # 선택한 숫자의 트랙커 객체 생성\n",
+    "            isInit = tracker.init(frame, bbox)  # 이전 추적 위치로 추적 위치 초기화\n",
+    "\n",
+    "    elif key == 27:  # ESC 키로 종료\n",
+    "        break\n",
+    "\n",
+    "cap.release()\n",
+    "cv2.destroyAllWindows()\n"
    ]
   }
  ],
